# sentinel-academia-hub

./: .env.deploy  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  amplify.yml  api-docs.html  package.json  pyproject.toml
api-mock/: openapi.yaml
docs/00-tutorial-llm/: tutorial-oci-llm.tex
docs/01-contexto/: contexto.tex
docs/01-tutorial-fase1/: tutorial-fase1-aws-sam.tex
docs/02-arquitectura/: arquitectura.md  dynamo-tenants.md  manual-instrucciones.md  patron-s3-lambda.md
docs/02-arquitectura/fuentes/: 01-contexto.mmd  02-contenedores.mmd  03-secuencia.mmd  04-despliegue.mmd
docs/02-tutorial-fase2/: tutorial-fase2-llm.tex
docs/03-resiliencia-llm/: checklist.md  resiliencia.tex
docs/03-resiliencia-llm/diagrams/: flujo-resiliencia.mmd
docs/03-tutorial-fase3/: tutorial-fase3-frontend.tex
docs/04-frontend/: arquitectura.md  componentes.md  mock-flow.md
docs/04-tutorial-fase4/: tutorial-fase4-files.tex
docs/05-repo-deploy/: checklist.md  costos.md  manual-deploy.md  prompt-lucidchart.md
docs/05-tutorial-fase5/: tutorial-fase5-rag.tex
docs/06-implementation-guide/: checklist-implementacion.md  guia-implementacion.tex
docs/06-tutorial-fase6/: tutorial-fase6-testing.tex
docs/07-tutorial-fase7/: tutorial-fase7-deploy.tex
docs/08-arquitectura-conexiones/: arquitectura-conexiones.tex
infra/: build.toml  template.yaml
knowledge/: reglamento.txt
scripts/: aws-academy-setup.sh  ingest_knowledge.py  install-cloud-tools.sh  regenerate-diagrams.sh  serve-docs.sh  test-mock.sh  test_e2e_flow.py  test_gemini.py  test_oci_llm.py  test_text_content.py
src/: requirements.txt
src/handlers/: __init__.py  analyze_queja.py  chat.py  create_queja.py  dashboard_metrics.py  file_processor.py  get_queja.py  health_check.py  list_quejas.py  notify_by_email.py  upload_url.py
src/handlers/_shared/: __init__.py  auth.py  config.py  correlation_id.py  dynamo_client.py  errors.py  http_response.py  logger.py  schemas.py
src/services/: __init__.py  complaint_aggregator.py  email_template.py  file_service.py  knowledge_service.py  llm_client.py  oci_http_client.py  tenant_config_service.py
src/tests/: conftest.py
src/tests/integration/: test_handlers.py
src/tests/unit/: test_complaint_aggregator.py  test_dynamo_client.py  test_knowledge_service.py  test_shared.py  test_tenant_config_service.py
web/: .env.example  .env.production  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: App.vue  main.ts
web/src/assets/styles/: main.css  variables.css
web/src/components/common/: AppButton.vue  AppInput.vue  AppSelect.vue  AppTextarea.vue  AppToast.vue
web/src/components/domain/: ChatMessage.vue  CriticidadIndicator.vue  QuejaForm.vue
web/src/composables/: useChat.ts  useQuejas.ts
web/src/router/: index.ts
web/src/services/: apiClient.ts  chatService.ts  dashboardService.ts  quejaService.ts
web/src/stores/: notifications.ts  tenant.ts
web/src/types/: api.ts
web/src/utils/: tenant.ts  uuid.ts
web/src/views/: AppShell.vue  ChatView.vue  DashboardView.vue  HomeView.vue  NotFoundView.vue  QuejaView.vue
