[project]
name = "sentinel-academia"
version = "0.1.0"
description = "Backend Python para plataforma de quejas universitarias con IA"
readme = "README.md"
requires-python = ">=3.12,<3.15"
authors = [
    { name = "Sentinel AcademIA Team" }
]
license = { text = "MIT" }

# Runtime deps (van dentro de cada Lambda empaquetada)
dependencies = [
    "aws-lambda-powertools[tracer,logger,metrics]>=3.0.0",
    "boto3>=1.40.0",
    "boto3-stubs[dynamodb,s3,ses,sns,sqs]>=1.40.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "httpx>=0.27.0",  # para tests
    "orjson>=3.10.0",  # serialización rápida
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "moto[dynamodb,s3,ses,sns,sqs,secretsmanager]>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-python-dateutil>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# --- Ruff (linter + formatter) ---
[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".venv", "build", "dist", ".aws-sam"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
    "PL",   # pylint
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line length (ruff format lo maneja)
    "PLR0913",  # too many args (a veces necesario)
    "PLR2004",  # magic value (a veces OK en tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004", "ARG", "FBT"]
"src/handlers/_shared/*.py" = ["TCH"]  # _shared importa boto3 siempre

[tool.ruff.lint.isort]
known-first-party = ["src", "tests"]

# --- Mypy (type checker estricto) ---
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
exclude = ["build", "dist", ".aws-sam", ".venv"]

[[tool.mypy.overrides]]
module = ["moto.*", "boto3.*", "botocore.*"]
ignore_missing_imports = true

# --- Pytest ---
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["src/tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=70",
]
markers = [
    "unit: tests unitarios (moto mock)",
    "integration: tests de integración (requieren AWS)",
    "slow: tests lentos (>1s)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:botocore.*",
    "ignore::DeprecationWarning:moto.*",
]

# --- Coverage ---
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/_shared/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
